feat(ui): fix some style issues

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
@@ -41,8 +41,7 @@
                     </nz-select>
                 </nz-form-control>
             </nz-form-item>
-
-            <nz-form-item class="register-area">
+            <nz-form-item>
                 <nz-form-control>
                     <button nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit"
                         nzType="primary">Submit</button>
