--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/stats/stats.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/stats/stats.html
@@ -4,7 +4,7 @@
         </lib-utask-chart-task-states>
     </div>
     <div nz-col nzSpan="12">
-        <nz-table nzTemplateMode>
+        <nz-table nzTemplateMode nzSize="small">
             <thead>
                 <tr>
                     <th></th>
