--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -6,14 +6,13 @@
         <nz-page-header-title><span class="bloc_status task_state_{{task.state}}">{{task.state}}</span> {{task.title}}
         </nz-page-header-title>
         <nz-page-header-extra>
-            Autorefresh (5s)
+            <span>Autorefresh (5s)</span>
             <nz-switch [(ngModel)]="autorefresh.actif" [nzDisabled]="!autorefresh.enable"
-                (ngModelChange)="autorefresh.hasChanged = true"></nz-switch>
-            <nz-button-group>
-                <button nz-button (click)="loadTask();" title="Refresh tasks"
-                    [disabled]="loaders.task || loaders.resolution"><i nz-icon
-                        [nzType]="loaders.task ? 'loading' : 'sync'"></i>Refresh</button>
-            </nz-button-group>
+                (ngModelChange)="autorefresh.hasChanged = true">
+            </nz-switch>
+            <button nz-button nzType="primary" nzShape="circle" nzSize="small" (click)="loadTask()"
+                title="Refresh tasks" [nzLoading]="loaders.task || loaders.resolution" [disabled]="autorefresh.actif"><i
+                    nz-icon nzType="sync"></i></button>
         </nz-page-header-extra>
     </nz-page-header>
 
@@ -64,11 +63,11 @@
         <div app-box-header>
             Request - {{task.id}}
             <nz-button-group nzSize="small">
-                <button nz-button nzType="primary" title="View as code"
-                    (click)="previewTask(); $event.stopPropagation();"><i nz-icon nzType="file-text"></i></button>
-                <button nz-button nzType="primary" title="Edit the task"
+                <button nz-button nzGhost title="View as code" (click)="previewTask(); $event.stopPropagation();"><i
+                        nz-icon nzType="file-text"></i></button>
+                <button nz-button nzGhost title="Edit the task"
                     (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
-                <button nz-button nzType="primary" title="Delete the task"
+                <button nz-button nzGhost title="Delete the task"
                     (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
             </nz-button-group>
         </div>
@@ -112,16 +111,16 @@
         <div app-box-header>
             Execution -
             <small>{{resolution.id}}</small> -
-            <small
-                class="bloc_status resolution_state_{{resolution.state}}">{{resolution.state}}{{resolution.state === 'ERROR' ? ' (retrying)' : ''}}</small>
+            <small class="bloc_status resolution_state_{{resolution.state}}">{{resolution.state}}{{resolution.state ===
+                'ERROR' ? ' (retrying)' : ''}}</small>
             <span *ngIf="loaders.execution || loaders.task">&nbsp;<i nz-icon nzType="loading"></i></span>
             <nz-button-group nzSize="small">
-                <button nz-button nzType="primary" title="Run" (click)="runResolution(resolution)"><i nz-icon
+                <button nz-button nzGhost nzType="primary" title="Run" (click)="runResolution(resolution)"><i nz-icon
                         nzType="caret-right"></i></button>
-                <button nz-button nzType="primary" title="Cancel" (click)="cancelResolution(resolution)"><i nz-icon
-                        nzType="stop"></i></button>
-                <button nz-button nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'" nzType="primary"
-                    (click)="$event.stopPropagation()">More</button>
+                <button nz-button nzGhost nzType="primary" title="Cancel" (click)="cancelResolution(resolution)"><i
+                        nz-icon nzType="stop"></i></button>
+                <button nz-button nzGhost nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'"
+                    nzType="primary" (click)="$event.stopPropagation()">More</button>
             </nz-button-group>
             <nz-dropdown-menu #menu="nzDropdownMenu">
                 <ul nz-menu>
@@ -176,8 +175,8 @@
                 <lib-utask-inputs-form [formGroup]="validateResolveForm" [inputs]="resolverInputs">
                 </lib-utask-inputs-form>
                 <form nz-form [formGroup]="validateResolveForm" (ngSubmit)="resolveTask()">
-                    <nz-form-item nz-row class="register-area">
-                        <nz-form-control [nzSpan]="14" [nzOffset]="resolverInputs ? 6 : 1">
+                    <nz-form-item nz-row>
+                        <nz-form-control>
                             <button nz-button nzType="primary" [disabled]="!validateResolveForm.valid"
                                 [nzLoading]="loaders.resolveTask">Resolve</button>
                         </nz-form-control>
@@ -193,15 +192,15 @@
             </div>
             <div app-box-content>
                 <form nz-form [formGroup]="validateRejectForm" (ngSubmit)="rejectTask()">
-                    <nz-form-item nz-row class="register-area">
-                        <nz-form-control [nzSpan]="14" [nzOffset]="resolverInputs ? 6 : 1">
+                    <nz-form-item nz-row>
+                        <nz-form-control>
                             <label formControlName="agree" nz-checkbox>
                                 Are you sure you want to reject this request ?
                             </label>
                         </nz-form-control>
                     </nz-form-item>
-                    <nz-form-item nz-row class="register-area">
-                        <nz-form-control [nzSpan]="14" [nzOffset]="resolverInputs ? 6 : 1">
+                    <nz-form-item nz-row>
+                        <nz-form-control>
                             <button nz-button nzType="danger" [disabled]="!validateRejectForm.valid"
                                 [nzLoading]="loaders.rejectTask">Reject</button>
                         </nz-form-control>
