--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
@@ -43,7 +43,7 @@
             </nz-form-item>
             <nz-form-item>
                 <nz-form-control>
-                    <button nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit"
+                    <button type="submit" nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit"
                         nzType="primary">Submit</button>
                 </nz-form-control>
             </nz-form-item>
