--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.html
@@ -1,2 +1,2 @@
 <svg #svg oncontextmenu="return false;"></svg>
-<button nz-button nzSize="large" (click)="center()"><i nz-icon nzType="aim"></i></button>
+<button type="button" nz-button nzSize="large" (click)="center()"><i nz-icon nzType="aim"></i></button>
