--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -10,7 +10,7 @@
             <nz-switch [(ngModel)]="autorefresh.actif" [nzDisabled]="!autorefresh.enable"
                 (ngModelChange)="autorefresh.hasChanged = true">
             </nz-switch>
-            <button nz-button nzType="primary" nzShape="circle" nzSize="small" (click)="loadTask()"
+            <button type="button" nz-button nzType="primary" nzShape="circle" nzSize="small" (click)="loadTask()"
                 title="Refresh tasks" [nzLoading]="loaders.task || loaders.resolution" [disabled]="autorefresh.actif"><i
                     nz-icon nzType="sync"></i></button>
         </nz-page-header-extra>
@@ -63,11 +63,11 @@
         <div app-box-header>
             Request - {{task.id}}
             <nz-button-group nzSize="small">
-                <button nz-button nzGhost title="View as code" (click)="previewTask(); $event.stopPropagation();"><i
-                        nz-icon nzType="file-text"></i></button>
-                <button nz-button nzGhost title="Edit the task"
+                <button type="button" nz-button nzGhost title="View as code"
+                    (click)="previewTask(); $event.stopPropagation();"><i nz-icon nzType="file-text"></i></button>
+                <button type="button" nz-button nzGhost title="Edit the task"
                     (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
-                <button nz-button nzGhost title="Delete the task"
+                <button type="button" nz-button nzGhost title="Delete the task"
                     (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
             </nz-button-group>
         </div>
@@ -115,12 +115,12 @@
                 'ERROR' ? ' (retrying)' : ''}}</small>
             <span *ngIf="loaders.execution || loaders.task">&nbsp;<i nz-icon nzType="loading"></i></span>
             <nz-button-group nzSize="small">
-                <button nz-button nzGhost title="Run" (click)="runResolution(resolution)"><i nz-icon
+                <button type="button" nz-button nzGhost title="Run" (click)="runResolution(resolution)"><i nz-icon
                         nzType="caret-right"></i></button>
-                <button nz-button nzGhost title="Cancel" (click)="cancelResolution(resolution)"><i nz-icon
+                <button type="button" nz-button nzGhost title="Cancel" (click)="cancelResolution(resolution)"><i nz-icon
                         nzType="stop"></i></button>
-                <button nz-button nzGhost nz-dropdown [nzDropdownMenu]="menu" [nzPlacement]="'bottomRight'"
-                    (click)="$event.stopPropagation()">More</button>
+                <button type="button" nz-button nzGhost nz-dropdown [nzDropdownMenu]="menu"
+                    [nzPlacement]="'bottomRight'" (click)="$event.stopPropagation()">More</button>
             </nz-button-group>
             <nz-dropdown-menu #menu="nzDropdownMenu">
                 <ul nz-menu>
@@ -177,7 +177,7 @@
                 <form nz-form [formGroup]="validateResolveForm" (ngSubmit)="resolveTask()">
                     <nz-form-item nz-row>
                         <nz-form-control>
-                            <button nz-button nzType="primary" [disabled]="!validateResolveForm.valid"
+                            <button type="submit" nz-button nzType="primary" [disabled]="!validateResolveForm.valid"
                                 [nzLoading]="loaders.resolveTask">Resolve</button>
                         </nz-form-control>
                     </nz-form-item>
@@ -201,7 +201,7 @@
                     </nz-form-item>
                     <nz-form-item nz-row>
                         <nz-form-control>
-                            <button nz-button nzType="danger" [disabled]="!validateRejectForm.valid"
+                            <button type="submit" nz-button nzType="danger" [disabled]="!validateRejectForm.valid"
                                 [nzLoading]="loaders.rejectTask">Reject</button>
                         </nz-form-control>
                     </nz-form-item>
@@ -253,7 +253,7 @@
                         <textarea [(ngModel)]="comment.content" nz-input [nzAutosize]="{ minRows: 2 }"></textarea>
                     </nz-form-item>
                     <nz-form-item>
-                        <button nz-button nzType="primary" [nzLoading]="loaders.addComment"
+                        <button type="submit" nz-button nzType="primary" [nzLoading]="loaders.addComment"
                             [disabled]="!comment.content" (click)="addComment()">
                             Add Comment
                         </button>
