feat(ui): fix some style issues (#225)
* feat(ui): fix some style issues

* fix(ui): improve task page style

Signed-off-by: richardlt <richard.le.terrier@gmail.com>

* fix(ui): template description

* fix: button type

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/new/new.html
@@ -41,10 +41,9 @@
                     </nz-select>
                 </nz-form-control>
             </nz-form-item>
-
-            <nz-form-item class="register-area">
+            <nz-form-item>
                 <nz-form-control>
-                    <button nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit"
+                    <button type="submit" nz-button [disabled]="!validateForm.valid" [nzLoading]="loaders.submit"
                         nzType="primary">Submit</button>
                 </nz-form-control>
             </nz-form-item>
