ui: fix the context menu on the d3 graph on firefox
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/steps-viewer/steps-viewer.html
@@ -1,2 +1,4 @@
-<svg #svg oncontextmenu="return false;"></svg>
-<button type="button" nz-button nzSize="large" (click)="center()"><i nz-icon nzType="aim"></i></button>
+<div oncontextmenu="return false;">
+    <svg #svg></svg>
+    <button nz-button nzSize="large" (click)="center()"><i nz-icon nzType="aim"></i></button>
+</div>
