--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -97,7 +97,7 @@
                     <span
                         *ngIf="task.created != task.last_activity || task.requester_username != task.resolver_username">
                         and
-                        updated by {{task.resolver_username}} <abbr
+                        updated by {{task.resolver_username ? task.resolver_username : task.requester_username}} <abbr
                             title="{{task.last_activity | date : 'yyyy/MM/dd HH:mm'}}"><em>{{task.last_activity |
                                 utaskFromNow}}</em></abbr></span>
                 </nz-descriptions-item>
