fix(utasklib): [nzModalFooter] -> *nzModalFooter
Signed-off-by: Simon Martinez <1263852+simonmartinez@users.noreply.github.com>

--- a/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-edit-resolution-step-state/modal-edit-resolution-step-state.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-edit-resolution-step-state/modal-edit-resolution-step-state.html
@@ -11,7 +11,7 @@
     <lib-utask-error-message [data]="errors.submit" *ngIf="errors.submit && !loaders.submit"></lib-utask-error-message>
 </form>
 
-<ng-template [nzModalFooter]>
+<ng-template *nzModalFooter>
     <form nz-form [formGroup]="modalForm" (submit)="submit()">
         <button type="button" nz-button nzType="warning" (click)="modal.triggerCancel()">Close</button>
         <button type="submit" nz-button nzType="primary"
