--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -40,7 +40,7 @@
                 <tbody>
                     <tr *ngFor="let tagKey of objectKeys(task.tags)">
                         <td>{{tagKey}}</td>
-                        <td>{{task.tags[tagKey] | json}}</td>
+                        <td>{{task.tags[tagKey]}}</td>
                     </tr>
                 </tbody>
             </table>
