--- a/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-edit-resolution-step-state/modal-edit-resolution-step-state.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@modals/modal-edit-resolution-step-state/modal-edit-resolution-step-state.html
@@ -11,10 +11,10 @@
     <lib-utask-error-message [data]="errors.submit" *ngIf="errors.submit && !loaders.submit"></lib-utask-error-message>
 </form>
 
-<ng-template *nzModalFooter>
+<div *nzModalFooter>
     <form nz-form [formGroup]="modalForm" (submit)="submit()">
         <button type="button" nz-button nzType="warning" (click)="modal.triggerCancel()">Close</button>
         <button type="submit" nz-button nzType="primary"
             [disabled]="loaders.submit || errors.submit || modalForm.invalid || loaders.submit">Save</button>
     </form>
-</ng-template>
+</div>
